@@ -119,7 +119,10 @@ namespace Orthanc
 
   void DicomFindAnswers::Add(const DicomMap& map)
   {
-    AddAnswerInternal(new ParsedDicomFile(map, encoding_));
+    // We use the permissive mode to be tolerant wrt. invalid DICOM
+    // files that contain some tags with out-of-range values (such
+    // tags are removed from the answers)
+    AddAnswerInternal(new ParsedDicomFile(map, encoding_, true /* permissive */));
   }
 
 
