@@ -81,7 +81,8 @@ namespace Orthanc
                     bool keepSopInstanceUid);
 
     void CreateFromDicomMap(const DicomMap& source,
-                            Encoding defaultEncoding);
+                            Encoding defaultEncoding,
+                            bool permissive);
 
     void RemovePrivateTagsInternal(const std::set<DicomTag>* toKeep);
 
@@ -97,7 +98,8 @@ namespace Orthanc
     ParsedDicomFile(bool createIdentifiers);  // Create a minimal DICOM instance
 
     ParsedDicomFile(const DicomMap& map,
-                    Encoding defaultEncoding);
+                    Encoding defaultEncoding,
+                    bool permissive);
 
     ParsedDicomFile(const DicomMap& map);
 
